# GraphicsTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  index.md
Engine/: BuildEngine.sh  CMakeLists.txt
Engine/src/: Engine.h  library.h
Engine/src/Engine/Core/: Application.cpp  Application.h  EntryPoint.h  Input.h  Window.h
Engine/src/Engine/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Engine/Core/Logger/: Log.cpp  Log.h
Engine/src/Engine/Core/Platform/: GLInput.cpp  GLInput.h  GLWindow.cpp  GLWindow.h
Engine/src/Engine/ECS/: Component.h  ECS.h  EcsTypes.h  Entity.h
Game/: CMakeLists.txt
Game/src/: main.cpp
